--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
     <!-- Three.js Library -->
     <script src="/threejs/threejs.js"></script>
     <!-- Loader for GLTF objects -->
     <script src="/threejs/GLTFLoader.js"></script> 
-<script src="main.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
