--- a/MainMenu.html
+++ b/MainMenu.html
@@ -4,13 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>THREE JS</title>
-    <link rel="stylesheet" href="/stylesheets/general.css">
     <link rel="stylesheet" href="/stylesheets/MainMemuStyle.css">
 </head>
 <style>
 </style>
 <body>
-    <p>ВАС ПРИВЕТСТВУЕТ ГЛАВНОЕ МЕНЮ</p>
-    <a href="/Scene1/Scene1.html">Тестовая сцена</a>
+    <div class="button">
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+      </div>
+      <!-- navbar menu -->
+      <div class='menu'>
+        <nav>
+          <ul>
+            <li>
+              <a href='#' data-class='info_is_visible '>Инструкция</a>
+            </li>
+            <li>
+                <a href='#' data-class='scene_is_visible '>Сцена</a>
+              </li>
+            <li>
+              <a href='#' data-class='records_is_visible'>Таблица рекордов</a>
+            </li>
+            <li>
+              <a href='#' data-class='mode_is_visible'>Режимы работы</a>
+            </li>
+            <li>
+              <a href='#' data-class='about_is_visible '>О программе</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- content -->
+      <div class='content info'>
+        <div class="wrapper">
+        <h1>Инструкция</h1>
+        <p>Данная программа предназначена для обучения студентов ... </p>
+        </div>
+        </div>
+      <div class='content scene'>
+          <iframe src="/Scene1/Scene1.html" frameborder="0"></iframe>
+      </div>
+      </div>
+      <div class='content records'>
+        <div class="wrapper">
+        <h1>Таблица рекордов</h1>
+        <p>1. Иванов Иван</p>
+        <p>2. Максимов Максим</p>
+      </div>
+      </div>
+      <div class='content mode'>
+        <div class="wrapper">
+        <h1>Режим работы программы</h1>
+        <p>1. ППО</p>
+        <p>2. ППУ</p>
+        <p>3. ППE</p>
+      </div>
+      </div>
+      <div class='content about'>
+        <div class="wrapper">
+        <h1>О программе</h1>
+        <p>Эта программа была написана с благодаря...</p>
+      </div>
+      </div>
+      <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous">
+    </script>
+    <script src="/javascripts/MainMenu.js"></script>
 </body>
 </html>
