--- a/MainMenu.html
+++ b/MainMenu.html
@@ -10,11 +10,30 @@
 </style>
 <body>
 
-
+  <svg id="hamburger"class="ham ham6 active" viewBox="0 0 100 100" width="80" onclick="this.classList.toggle('active')">
+    <path
+          class="line top"
+          d="m 30,33 h 40 c 13.100415,0 14.380204,31.80258 6.899646,33.421777 -24.612039,5.327373 9.016154,-52.337577 -12.75751,-30.563913 l -28.284272,28.284272" />
+    <path
+          class="line middle"
+          d="m 70,50 c 0,0 -32.213436,0 -40,0 -7.786564,0 -6.428571,-4.640244 -6.428571,-8.571429 0,-5.895471 6.073743,-11.783399 12.286435,-5.570707 6.212692,6.212692 28.284272,28.284272 28.284272,28.284272" />
+    <path
+          class="line bottom"
+          d="m 69.575405,67.073826 h -40 c -13.100415,0 -14.380204,-31.80258 -6.899646,-33.421777 24.612039,-5.327373 -9.016154,52.337577 12.75751,30.563913 l 28.284272,-28.284272" />
+    </svg>
+  
+  <div id="cube-loader">
+    <div class="caption">
+      <div class="cube-loader">
+        <div class="cube loader-1"></div>
+        <div class="cube loader-2"></div>
+        <div class="cube loader-4"></div>
+        <div class="cube loader-3"></div>
+      </div>
+    </div>
+  </div>
 
   <iframe src="/Scene1/Scene1.html" frameborder="0"></iframe>
-
-
 
   <div id="menu" class="menu_grid">
     <div id="regimes" class="regimes_def_position regimes_grid">
@@ -88,53 +107,6 @@
     </div>
   </div>
 
-
-
-
-
-
-
-  <!-- <div id="menu" class="menu_grid">
-    <div id="regimes" class="regimes_def_position regimes_grid">
-      <form action="" class="modes_grid">
-        <div><input type="radio" name="modes" value="learning">Обучение</div>
-        <div><input type="radio" name="modes" value="exam">Экзамен</div>
-       </form>
-    <div id="start_position">
-      <p class="sub_titles">Начальное положениe</p>
-      <form action="">
-        <input type="radio" name="start_position" value="walk">Пходное<Br>
-        <input type="radio" name="start_position" value="war">Боевое<Br>
-        <input type="radio" name="start_position" value="deployed">Развёрнутое<Br>
-      </form>
-    </div>
-    <div id="end_position">
-      <p class="sub_titles">Конечное положениe</p>
-      <form action="">
-        <input id="walk" type="radio" name="end_position" value="walk">Пходное<Br>
-        <input id="war" type="radio" name="end_position" value="war">Боевое<Br>
-        <input id="deployed" type="radio" name="end_position" value="deployed">Развёрнутое<Br>
-      </form>
-    </div>
-    <div id="ppo_control">
-      <p class="sub_titles">Управление ПУ с</p>
-      <form action="">
-        <input type="radio" name="ppo_control" value="ppk">ППК<Br>
-        <input type="radio" name="ppo_control" value="ppo">ППО<Br>
-      </form>
-    </div>
-    <div id="mode_header">
-      <p><button id="start_button" >Начать</button></p>
-    </div>
-    <div id="modes">
-      <form action="" class="modes_grid">
-       <div> <p><input type="radio" name="modes" value="learning">Обучение</p></div>
-       <div><p><input type="radio" name="modes" value="exam">Экзамен</p></div>
-      </form>
-    </div>
-    </div>
-  </div> -->
-  
     <script
         src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
