--- a/MainMenu.html
+++ b/MainMenu.html
@@ -106,13 +106,7 @@
     </div>
     </div>
   </div>
-
-    <script
-        src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-        crossorigin="anonymous">
-    </script>
-
+    <script src="/javascripts/jQuery.js"></script>
     <script src="/javascripts/MainMenu.js"></script>
 </body>
 </html>
