Changes: 	1. finished menu logic

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -46,40 +46,25 @@
          </form>
       </div>
       <div id="start_position">
-        <p>НАЧАЛЬНОЕ ПОЛОЖЕНИЕ</p>
+        <p>РЕЖИМ</p>
       </div>
       <div id="form_start_position">
         <form action="" class="start_position_form_grid">
           <div class="form_item">
-            <input class="center" type="radio" name="start_position" value="walk">
-            <p class="center">ПОХОДНОЕ</p>
+            <input class="center" type="radio" name="start_position" value="down_supports">
+            <p class="center">ОПУСТИТЬ ДМКР</p>
           </div>
           <div class="form_item">
-            <input class="center" type="radio" name="start_position" value="war">
-            <p class="center">БОЕВОЕ</p>
+            <input class="center" type="radio" name="start_position" value="up_supports">
+            <p class="center">ПОДНЯТЬ ДМКР</p>
           </div>
           <div class="form_item">
-            <input class="center" type="radio" name="start_position" value="deployed">
-            <p class="center">РАЗВЁРНУТОЕ</p>
-          </div>
-        </form>
-      </div>
-      <div id="end_position">
-        <p>КОНЕЧНОЕ ПОЛОЖЕНИЕ</p>
-      </div>
-      <div id="form_end_position">
-        <form action="" class="end_position_form_grid">
-          <div class="form_item">
-            <input class="center" type="radio" name="end_position" value="walk">
-            <p class="center">ПОХОДНОЕ</p>
+            <input class="center" type="radio" name="start_position" value="down_tpk">
+            <p class="center">ОПУСТИТЬ ТПК</p>
           </div>
           <div class="form_item">
-            <input class="center" type="radio" name="end_position" value="war">
-            <p class="center">БОЕВОЕ</p>
-          </div>
-          <div class="form_item">
-            <input class="center" type="radio" name="end_position" value="deployed">
-            <p class="center">РАЗВЁРНУТОЕ</p>
+            <input class="center" type="radio" name="start_position" value="up_tpk">
+            <p class="center">ПОДНЯТЬ ТПК</p>
           </div>
         </form>
       </div>
@@ -89,11 +74,11 @@
       <div id="form_control">
         <form action="" class="control_form_grid">
           <div class="form_item">
-            <input class="center" type="radio" name="control" value="walk">
+            <input class="center" type="radio" name="control" value="ppo">
             <p class="center">ППО</p>
           </div>
           <div class="form_item">
-            <input class="center" type="radio" name="control" value="war">
+            <input class="center" type="radio" name="control" value="ppu">
             <p class="center">ППУ</p>
           </div>
         </form>
