Changes: 	1. almost finished all sequences

--- a/MainMenu.html
+++ b/MainMenu.html
@@ -79,7 +79,7 @@
           </div>
           <div class="form_item">
             <input class="center" type="radio" name="control" value="ppu">
-            <p class="center">ППУ</p>
+            <p class="center">ППК</p>
           </div>
         </form>
       </div>
