--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>THREE JS</title>
-    <link rel="stylesheet" href="/stylesheets/MainMemuStyle.css">
+    <link rel="stylesheet" href="public/stylesheets/MainMemuStyle.css">
 </head>
 <style>
 </style>
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <iframe src="/Scene1/Scene1.html" frameborder="0"></iframe>
+  <iframe src="dist/Scene1/Scene1.html" frameborder="0"></iframe>
 
   <div id="menu" class="menu_grid">
     <div id="regimes" class="regimes_def_position regimes_grid">
@@ -91,7 +91,7 @@
     </div>
     </div>
   </div>
-    <script src="/javascripts/jQuery.js"></script>
-    <script src="/javascripts/MainMenu.js"></script>
+    <script src="public/javascripts/jQuery.js"></script>
+    <script src="public/javascripts/MainMenu.js"></script>
 </body>
 </html>
