--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
     </div>
   </div>
     <button id="exit_button"> ВЫХОД </button>
+    <script>
+      document.getElementById("exit_button").addEventListener("click",()=>{
+        require('nw.gui').App.quit();
+      })
+    </script>
     <script src="/javascripts/jQuery.js"></script>
     <script src="/javascripts/MainMenu.js"></script>
 </body>
