i hope this is last commit on this project

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     </div>
     </div>
   </div>
+    <button id="exit_button"> ВЫХОД </button>
     <script src="/javascripts/jQuery.js"></script>
     <script src="/javascripts/MainMenu.js"></script>
 </body>
